Rename /icons to images, funky bug.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         .on("mouseover", function(d) {
           if (!d.children) {
             div.html(
-              '<img src="' + "icons/" + d.icon + '" width="180"/><br/>' +
+              '<img src="' + "images/" + d.icon + '" width="180"/><br/>' +
               '<a href= "' + d.link + '">More Info &raquo;</a>' +
               "<br/>" +
               "Owner: " + d.Contact
